--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="escreva_padrao">Escreva aqui...</string>
     <string name="pesquisar_hint">Pesquisar</string>
     <string name="limpar_padrao">Limpar</string>
+    <string name="buttonVoltar">Voltar</string>
 </resources>
